# seamless_interaction

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  dataset-issue.yml  documentation.yml
.github/actions/setup/: action.yaml
.github/workflows/: lint_and_test.yaml
assets/: diff.csv  interactions.csv  participants.csv  relationships.csv
scripts/: dataloader_webdataset.py  download_hf.py  download_s3.py
src/seamless_interaction/: constants.py  fs.py  utils.py
src/seamless_interaction/app/: Welcome.py  __init__.py  config.py  utils.py
src/seamless_interaction/app/pages/: 1_📊_Overview.py  2_🗳️_Download.py  3_🎭_Interaction.py
tests/: conftest.py  test_fs.py  test_integration.py
