[build-system]
requires = ["packaging~=24.2", "setuptools~=75.8", "wheel~=0.45"]
build-backend = "setuptools.build_meta"

[project]
name = "seamless-interaction"
dynamic = ["version"]
description = "Library for seamless interaction dataset"
authors = [
    {name = "Meta AI | FAIR Seamless Team"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: CC BY-NC 4.0",
    "Operating System :: OS Independent",
]
dependencies = [
    "boto3>=1.38.27",
    "datasets>=3.6.0",
    "fsspec>=2025.3.0",
    "jupyterlab>=4.4.3",
    "librosa>=0.11.0",
    "llvmlite>=0.43.0",
    "mypy>=1.16.1",
    "numpy>=1.26.0",
    "opencv-python>=4.7.0.72",
    "pandas>=1.5.1",
    "plotly>=6.1.2",
    "pre-commit>=4.2.0",
    "pylance>=0.29.0",
    "pytest>=8.4.1",
    "ruff>=0.12.0",
    "s3fs>=0.4.2",
    "streamlit>=1.46.0",
    "webdataset>=1.0.2",
    "wget>=3.2",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["seamless_interaction*"]

[tool.setuptools.dynamic]
version = {attr = "seamless_interaction.__version__"}

[project.urls]
"Homepage" = "https://github.com/facebookresearch/seamless_interaction"
"Bug Tracker" = "https://github.com/facebookresearch/seamless_interaction"

[tool.mypy]
ignore_missing_imports = true
exclude = ["src/seamless_interaction/app/"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
